[project]
name = "nonebot-plugin-asf"
version = "0.1.0"
description = "NoneBot plugin for controlling ArchiSteamFarm through Telegram and ASF IPC."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "zanderzhng" },
]
dependencies = [
    "nonebot2[fastapi]>=2.5.0,<3.0.0",
    "httpx[socks]>=0.27.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/zanderzhng/nonebot-plugin-asf"
Repository = "https://github.com/zanderzhng/nonebot-plugin-asf"
"ASF IPC" = "https://github.com/JustArchiNET/ArchiSteamFarm/wiki/IPC"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nonebot_plugin_asf"]

[tool.nonebot]
plugins = ["nonebot_plugin_asf"]
